added few lines and styles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             padding: 0;
             box-sizing: border-box;
         }
+        body{
+            border: solid black 10px;
+        }
     </style>
 </head>
 <body>
@@ -39,6 +42,12 @@
                 <td>Rose</td>
                 <td>Mobasi</td>
                 <td>Company CTO</td>    
+            </tr>
+            <tr>
+                <td>nangida</td>
+                <td>winner</td>
+                <td>CEO</td>
+                
             </tr>
         </tbody>
     </table>
